# ioxx

./: .gitignore  CMakeLists.txt  README.md  gitdeps.json
cmake/: ioxxConfig.cmake.in
examples/: tcp_server.cpp  udp_echo.cpp
include/ioxx/: core.hpp  export.hpp  ioxx.hpp  net.hpp  signals.hpp  unix.hpp  windows.hpp
src/: core.cpp  ioxx.cppm  net.cpp  signals.cpp  socket.cpp  socket.hpp  unix.cpp  windows.cpp
tests/: core_tests.cpp  no_exceptions_test.cpp  tcp_tests.cpp  udp_tests.cpp  unix_tests.cpp  windows_tests.cpp
